# python-workshop

./: README.md
part-1/: README.md  WINDOWS_SETUP.md  pyproject.toml
part-1-getting-your-environment-setup/.devcontainer/: devcontainer.json
part-1/.devcontainer/: Dockerfile
part-1/src/: main.py
part-1/tests/: test_main.py
part-2-introduction-to-python-using-the-repl/: README.md
part-2-the-repl/: README.md
