[tool.poetry]
name = "part-1"
version = "0.1.0"
description = "Getting your dev environment setup"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "part_1"}]

[tool.poetry.dependencies]
python = "^3.10"
emoji = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
